# DotLang

./: CMakeLists.txt
docs/: switch.dot
src/: main.cpp
src/dot/: ArgsList.cpp  ArgsList.hpp  Dot.cpp  Dot.hpp  Exception.cpp  Exception.hpp  Node.cpp  Node.hpp  NodeExecutor.cpp  NodeExecutor.hpp  Scope.cpp  Scope.hpp
src/dot/operator/: BaseOperator.hpp  BinaryOperator.cpp  BinaryOperator.hpp
src/dot/parse/: Lexer.cpp  Lexer.hpp  ParseStmt.cpp  Parser.cpp  Parser.hpp  Position.cpp  Position.hpp  Token.hpp  lex_table.hpp
src/dot/type/: DotMethod.cpp  DotMethod.hpp  DotType.cpp  DotType.hpp  DotValue.cpp  DotValue.hpp  DotVariable.cpp  DotVariable.hpp
src/lens/: TList.hpp
